fdo#68552: Don't (attempt to) do run-time expansion of build-time parameters

The $(share_subdir_name) things in the filter fragment .xcu files didn't
actually work it seems. But anyway, it's a bit silly to do expansion at
run-time of $(foo) things known at build-time anyway. Thanks to sberg for
pointing this out.

So just use the normal configury .in mechanism for these. Simpler.

Change-Id: I14b3e5cc5169b34df8a1d7ff07cc28452c67bcc8